Start writing overview/clustering section.

--- a/main.tex
+++ b/main.tex
@@ -3,7 +3,7 @@
 % Setting up the page
 \usepackage{fullpage}
 \usepackage{setspace}
-    \doublespacing%
+    \onehalfspacing%
 
 % Bibliography and referencing
 \usepackage[numbers]{natbib}
