--- a/bibliography.bib
+++ b/bibliography.bib
@@ -129,6 +129,18 @@
               Vanfleteren},
 }
 
+@article{Huang1998,
+    author  = {Huang, Zhexue},
+    title   = {Extensions to the $k$-means algorithm for clustering large data
+               sets with categorical values},
+    journal = {Data Mining and Knowledge Discovery},
+    year    = {1998},
+    volume  = {2},
+    number  = {3},
+    pages   = {283--304},
+    doi     = {10.1023/A:1009769707641},
+}
+
 @article{Kuwornu2014,
     title = {Multimorbidity Disease Clusters in {Aboriginal} and
              {non-Aboriginal} {Caucasian} Populations in {Canada}},
@@ -230,6 +242,19 @@
     doi = {10.1080/1743727X.2014.979146},
 }
 
+@inproceedings{Satopaa2011,
+    author = {Satopaa, Ville and Albrecht, Jeannie and Irwin, David and
+              Raghavan, Barath},
+    year = {2011},
+    month = {07},
+    pages = {166--171},
+    title = {Finding a `Kneedle' in a Haystack: Detecting Knee Points in System
+             Behavior},
+    booktitle = {Proceedings of the 2011 31st International Conference on
+                 Distributed Computing Systems Workshops},
+    doi = {10.1109/ICDCSW.2011.20}
+}
+
 @article{Vuik2016a,
     author = {Vuik, Sabine I. and Mayer, Erik K. and Darzi, Ara},
     year = {2016},
@@ -311,4 +336,3 @@
     author = {Sungwon Yoon and Hendra Goh and Yu Heng Kwan and Julian Thumboo
               and Lian Leng Low},
 }
-
