--- a/bibliography.bib
+++ b/bibliography.bib
@@ -279,6 +279,16 @@
     doi = {10.1377/hlthaff.2015.1311},
 }
 
+@misc{Wilde2020,
+    title = {A novel initialisation based on hospital-resident assignment for
+             the k-modes algorithm},
+    author = {Henry Wilde and Vincent Knight and Jonathan Gillard},
+    year = {2020},
+    eprint = {2002.02701},
+    archivePrefix = {arXiv},
+    primaryClass = {cs.LG},
+}
+
 @book{Wu2009,
     title = {The top ten algorithms in data mining},
     author = {Wu, Xindong and Kumar, Vipin},
