--- a/main.tex
+++ b/main.tex
@@ -14,6 +14,7 @@
 \usepackage{graphicx}
     \graphicspath{{img/}}
 \usepackage{booktabs}
+    \renewcommand{\arraystretch}{1.2}
 \usepackage{caption}
 \usepackage{subcaption}
 
