--- a/tex/summary.tex
+++ b/tex/summary.tex
@@ -1,41 +1,41 @@
 \begin{tabular}{llrrrrr}
 \toprule
-               &        &  Cluster &          &          &           & Population (mean) \\
-               &        &        0 &        1 &        2 &         3 &                   \\
+               &        &  Cluster &          &          &           & Population \\
+               &        &        0 &        1 &        2 &         3 &            \\
 \midrule
-\textbf{Characteristics} & \textbf{Mean spell cost} &  8083.69 &  2312.39 &  1509.22 &  17847.80 &           2280.54 \\
-               & \textbf{Mean age} &    76.15 &    77.16 &    71.01 &     81.36 &             72.22 \\
-               & \textbf{Mean COPD adm. in year} &     1.91 &     1.51 &     1.31 &      1.98 &              1.29 \\
-               & \textbf{Min. LOS} &    12.82 &    -0.00 &    -0.02 &     48.82 &              5.41 \\
-               & \textbf{Mean LOS} &    25.30 &     6.45 &     3.79 &     74.65 &              7.47 \\
-               & \textbf{Max. LOS} &    51.36 &    30.86 &    16.94 &    224.93 &             10.40 \\
-               & \textbf{Median no. of LTCs} &     2.00 &     3.00 &     1.00 &      3.00 &              2.00 \\
-               & \textbf{Median no. ICDs} &     9.00 &     8.00 &     5.00 &     11.00 &              6.58 \\
-               & \textbf{Median CCI} &     9.00 &    20.00 &     4.00 &     18.00 &              9.72 \\
-\textbf{Intervention prevalence} & \textbf{None, \%} &    80.26 &    83.40 &    65.76 &     89.81 &             70.95 \\
-               & \textbf{Pulmonary rehab., \%} &    15.77 &    13.41 &    27.96 &      8.92 &             23.66 \\
-               & \textbf{Spec. nursing, \%} &     3.78 &     2.91 &     4.63 &      1.27 &              4.16 \\
-               & \textbf{Both, \%} &     0.18 &     0.29 &     1.66 &      0.00 &              1.22 \\
-\textbf{LTC prevalence} & \textbf{Pulmonary disease, \%} &   100.00 &   100.00 &   100.00 &    100.00 &            100.00 \\
-               & \textbf{Diabetes, \%} &    20.12 &    28.70 &    16.71 &     25.83 &             20.07 \\
-               & \textbf{CHF, \%} &    14.47 &    54.62 &     0.00 &     27.15 &             14.83 \\
-               & \textbf{AMI, \%} &    14.35 &    23.42 &    10.86 &     16.56 &             14.28 \\
-               & \textbf{Renal disease, \%} &     8.59 &    22.52 &     3.02 &     18.54 &              8.50 \\
-               & \textbf{Cancer, \%} &     8.12 &    13.69 &     4.11 &     10.60 &              6.94 \\
-               & \textbf{Dementia, \%} &     7.53 &    20.08 &     0.00 &     25.17 &              6.10 \\
-               & \textbf{CVA, \%} &     9.65 &    15.01 &     1.21 &     19.21 &              5.85 \\
-               & \textbf{PVD, \%} &     5.06 &     8.90 &     3.18 &      5.96 &              4.78 \\
-               & \textbf{CTD, \%} &     5.18 &     5.07 &     4.01 &      4.64 &              4.42 \\
-               & \textbf{Obesity, \%} &     2.82 &     3.75 &     2.22 &      7.95 &              2.78 \\
-               & \textbf{Metastatic cancer, \%} &     1.88 &     5.70 &     0.00 &      0.66 &              1.54 \\
-               & \textbf{Paraplegia, \%} &     1.29 &     3.96 &     0.25 &      0.66 &              1.23 \\
-               & \textbf{Sepsis, \%} &     2.12 &     1.25 &     0.25 &      1.99 &              0.76 \\
-               & \textbf{Peptic ulcer, \%} &     1.76 &     1.04 &     0.35 &      1.32 &              0.72 \\
-               & \textbf{Diabetic compl., \%} &     0.24 &     0.69 &     0.33 &      1.99 &              0.44 \\
-               & \textbf{Liver disease, \%} &     0.35 &     0.56 &     0.33 &      0.00 &              0.37 \\
-               & \textbf{Severe liver disease, \%} &     0.24 &     0.63 &     0.00 &      0.00 &              0.17 \\
-               & \textbf{C. diff, \%} &     0.82 &     0.14 &     0.03 &      0.66 &              0.17 \\
-               & \textbf{MRSA, \%} &     0.35 &     0.07 &     0.05 &      1.32 &              0.12 \\
-               & \textbf{HIV, \%} &     0.00 &     0.00 &     0.03 &      0.00 &              0.02 \\
+\textbf{Characteristics} & \textbf{Mean spell cost, £} &  8083.69 &  2312.39 &  1509.22 &  17847.80 &    2280.54 \\
+               & \textbf{Mean age} &    76.09 &    76.66 &    70.55 &     81.70 &      72.22 \\
+               & \textbf{COPD adm. last year} &     2.20 &     1.97 &     1.88 &      2.08 &       1.93 \\
+               & \textbf{Minimum LOS} &    12.82 &     0.01 &     0.00 &     48.82 &       0.00 \\
+               & \textbf{Mean LOS} &    25.32 &     6.47 &     4.11 &     75.20 &       7.70 \\
+               & \textbf{Maximum LOS} &    51.36 &    30.86 &    16.94 &    224.93 &     224.93 \\
+               & \textbf{Median no. of LTCs} &     2.00 &     3.00 &     1.00 &      3.00 &       1.00 \\
+               & \textbf{Median no. of ICDs} &     9.00 &     8.00 &     5.00 &     11.00 &       6.00 \\
+               & \textbf{Median CCI} &     9.00 &    20.00 &     4.00 &     18.00 &       4.00 \\
+\textbf{Intervention prevalence} & \textbf{None, \%} &    80.26 &    83.39 &    65.75 &     89.81 &       0.71 \\
+               & \textbf{Pulmonary rehab., \%} &    15.77 &    13.41 &    27.96 &      8.92 &       0.24 \\
+               & \textbf{Spec. nursing, \%} &     3.78 &     2.91 &     4.63 &      1.27 &       0.04 \\
+               & \textbf{Both, \%} &     0.18 &     0.29 &     1.66 &      0.00 &       0.01 \\
+\textbf{LTC prevalence} & \textbf{Pulmonary disease, \%} &   100.00 &   100.00 &   100.00 &    100.00 &     100.00 \\
+               & \textbf{Diabetes, \%} &    19.05 &    28.15 &    14.84 &     25.00 &      17.97 \\
+               & \textbf{AMI, \%} &    13.85 &    22.94 &     8.76 &     16.03 &      12.10 \\
+               & \textbf{CHF, \%} &    12.45 &    53.82 &     0.00 &     26.28 &      11.98 \\
+               & \textbf{Renal disease, \%} &     7.53 &    19.55 &     1.92 &     17.95 &       6.11 \\
+               & \textbf{Cancer, \%} &     7.62 &    12.24 &     2.93 &     10.90 &       5.30 \\
+               & \textbf{Dementia, \%} &     6.88 &    21.27 &     0.00 &     26.92 &       5.17 \\
+               & \textbf{CVA, \%} &     8.64 &    13.34 &     0.70 &     19.87 &       4.20 \\
+               & \textbf{PVD, \%} &     4.37 &     7.70 &     2.27 &      5.77 &       3.57 \\
+               & \textbf{CTD, \%} &     5.11 &     4.25 &     3.11 &      4.49 &       3.55 \\
+               & \textbf{Obesity, \%} &     2.51 &     3.01 &     1.49 &      7.69 &       1.97 \\
+               & \textbf{Metastatic cancer, \%} &     1.58 &     4.49 &     0.00 &      0.64 &       1.03 \\
+               & \textbf{Paraplegia, \%} &     1.30 &     3.73 &     0.24 &      0.64 &       1.02 \\
+               & \textbf{Diabetic compl., \%} &     0.19 &     0.86 &     0.48 &      1.92 &       0.54 \\
+               & \textbf{Peptic ulcer, \%} &     1.58 &     0.81 &     0.23 &      1.28 &       0.49 \\
+               & \textbf{Sepsis, \%} &     1.77 &     0.91 &     0.15 &      1.92 &       0.48 \\
+               & \textbf{Liver disease, \%} &     0.28 &     0.48 &     0.23 &      0.00 &       0.28 \\
+               & \textbf{C. diff, \%} &     0.74 &     0.10 &     0.01 &      0.64 &       0.11 \\
+               & \textbf{Severe liver disease, \%} &     0.19 &     0.43 &     0.00 &      0.00 &       0.10 \\
+               & \textbf{MRSA, \%} &     0.28 &     0.05 &     0.03 &      1.28 &       0.07 \\
+               & \textbf{HIV, \%} &     0.00 &     0.00 &     0.03 &      0.00 &       0.02 \\
 \bottomrule
 \end{tabular}
