Add TODO marker for queue lit review
Co-authored-by: Vince Knight <vincent.knight@gmail.com>

--- a/sections/intro.tex
+++ b/sections/intro.tex
@@ -97,7 +97,7 @@ is of particular significance.
 These are the principal queuing theory works by
 Erlang~\cite{Erlang1917,Erlang1920}. Deadlock is an aspect of applied queuing
 theory of interest in recent literature~\cite{Palmer2018}. The software used is
-Ciw~\cite{Palmer2019}.
+Ciw~\cite{Palmer2019}.  % TODO Write this section
 
 \subsubsection{Handling incomplete queue data}
 
