Remove "ongoing research" phrase
Co-authored-by: Vince Knight <vincent.knight@gmail.com>

--- a/sections/intro.tex
+++ b/sections/intro.tex
@@ -126,8 +126,7 @@ distribution in single server and infinite server queues respectively.
 
 \subsection{Overview of the dataset and its clustering}\label{subsec:overview}
 
-The dataset used in this work was provided by the Cwm Taf Morgannwg UHB as part
-of an ongoing research project with the authors. The dataset contains a
+The dataset used in this work was provided by the Cwm Taf Morgannwg UHB. The dataset contains a
 spell-level summary of \input{tex/npatients}patients presenting COPD from
 \input{tex/min_date}through \input{tex/max_date}totalling
 \input{tex/nspells}spells. The dataset is made up of instances each describing a
