Fix Larsen2017 citation

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -158,7 +158,7 @@
              Socio-Demographic Factors and Health-Related Quality of Life. A
              National Population-Based Study of 162,283 {Danish} Adults},
     year = {2017},
-    volume = {12},}
+    volume = {12},
     number = {1},
     journal = {PLoS One},
     doi = {10.1371/journal.pone.0169426},
