--- a/sections/intro.tex
+++ b/sections/intro.tex
@@ -75,7 +75,7 @@ corresponding to a latent class. The discovered relations are then used to
 separate the observations into latent classes according to their maximum
 likelihood class membership~\cite{Hagenaars2002,Lazarsfeld1968}. This method has
 proved useful in the study of comorbidity patterns as
-in~\cite{Larsen2017,Kuwornu2014} where combinations of demographic and clinical
+in~\cite{Kuwornu2014,Larsen2017} where combinations of demographic and clinical
 attributes are related to various subgroups of chronic diseases.
 
 Similarly to LCA, clustering identifies groups (clusters) in data to produce a
@@ -166,9 +166,9 @@ spell:
 \end{itemize}
 
 Due to a lack of information about the patients beyond their COPD-related
-admissions, the spells of the dataset were segmented. A variant of the
-\(k\)-means algorithm was used. This variant, called \(k\)-prototypes, allows
-for the clustering of mixed-type data by performing \(k\)-means on the numeric
+admissions, the spells of the dataset were segmented using a variant of the
+\(k\)-means algorithm. This variant, called \(k\)-prototypes, allows for the
+clustering of mixed-type data by performing \(k\)-means on the numeric
 attributes and \(k\)-modes on the categoric. Both \(k\)-prototypes and
 \(k\)-modes were presented in~\cite{Huang1998}.
 
