Remove "spell-level" term.

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -196,6 +196,13 @@
     author = {Daniel A. Newman},
 }
 
+@misc{NHS2020,
+    title = {{NHS Business Definitions: Hospital Provider Spell}},
+    author = {{NHS Data Model and Dictionary}},
+    url = {https://www.datadictionary.nhs.uk/data_dictionary/nhs_business_definitions/h/hospital_provider_spell_de.asp},
+    year = {2020 (accessed 2020-06-15)},
+}
+
 @article{Olafsson2008,
     title = "Operations research and data mining",
     journal = "European Journal of Operational Research",
