--- a/tex/summary.tex
+++ b/tex/summary.tex
@@ -3,29 +3,30 @@
                &        &  Cluster &          &          &           & Population \\
                &        &        0 &        1 &        2 &         3 &            \\
 \midrule
-\textbf{Characteristics} & \textbf{Mean spell cost, £} &  8083.69 &  2312.39 &  1509.22 &  17847.80 &    2280.54 \\
-               & \textbf{Mean age} &    76.09 &    76.66 &    70.55 &     81.70 &      72.22 \\
-               & \textbf{COPD adm. last year} &     2.20 &     1.97 &     1.88 &      2.08 &       1.93 \\
-               & \textbf{Minimum LOS} &    12.82 &     0.01 &     0.00 &     48.82 &       0.00 \\
-               & \textbf{Mean LOS} &    25.32 &     6.47 &     4.11 &     75.20 &       7.70 \\
+\textbf{Characteristics} & \textbf{Percentage of spells} &     9.91 &    19.27 &    69.39 &      1.44 &     100.00 \\
+               & \textbf{Mean spell cost, £} &  8051.23 &  2309.63 &  1508.41 &  17888.43 &    2265.40 \\
+               & \textbf{Mean age} &    75.97 &    76.68 &    70.55 &     81.36 &      72.21 \\
+               & \textbf{COPD adm. last year} &     2.19 &     1.96 &     1.88 &      2.09 &       1.93 \\
+               & \textbf{Minimum LOS} &    12.82 &    -0.00 &    -0.02 &     48.82 &      -0.02 \\
+               & \textbf{Mean LOS} &    25.30 &     6.46 &     4.11 &     75.36 &       7.68 \\
                & \textbf{Maximum LOS} &    51.36 &    30.86 &    16.94 &    224.93 &     224.93 \\
                & \textbf{Median no. of LTCs} &     2.00 &     3.00 &     1.00 &      3.00 &       1.00 \\
                & \textbf{Median no. of ICDs} &     9.00 &     8.00 &     5.00 &     11.00 &       6.00 \\
                & \textbf{Median CCI} &     9.00 &    20.00 &     4.00 &     18.00 &       4.00 \\
-\textbf{Intervention prevalence} & \textbf{None, \%} &    80.26 &    83.39 &    65.75 &     89.81 &       0.71 \\
-               & \textbf{Pulmonary rehab., \%} &    15.77 &    13.41 &    27.96 &      8.92 &       0.24 \\
-               & \textbf{Spec. nursing, \%} &     3.78 &     2.91 &     4.63 &      1.27 &       0.04 \\
-               & \textbf{Both, \%} &     0.18 &     0.29 &     1.66 &      0.00 &       0.01 \\
+\textbf{Intervention prevalence} & \textbf{None, \%} &    80.20 &    83.42 &    65.76 &     89.74 &       0.71 \\
+               & \textbf{Pulmonary rehab., \%} &    15.80 &    13.43 &    27.97 &      8.97 &       0.24 \\
+               & \textbf{Spec. nursing, \%} &     3.81 &     2.87 &     4.63 &      1.28 &       0.04 \\
+               & \textbf{Both, \%} &     0.19 &     0.29 &     1.63 &      0.00 &       0.01 \\
 \textbf{LTC prevalence} & \textbf{Pulmonary disease, \%} &   100.00 &   100.00 &   100.00 &    100.00 &     100.00 \\
-               & \textbf{Diabetes, \%} &    19.05 &    28.15 &    14.84 &     25.00 &      17.97 \\
-               & \textbf{AMI, \%} &    13.85 &    22.94 &     8.76 &     16.03 &      12.10 \\
-               & \textbf{CHF, \%} &    12.45 &    53.82 &     0.00 &     26.28 &      11.98 \\
-               & \textbf{Renal disease, \%} &     7.53 &    19.55 &     1.92 &     17.95 &       6.11 \\
-               & \textbf{Cancer, \%} &     7.62 &    12.24 &     2.93 &     10.90 &       5.30 \\
-               & \textbf{Dementia, \%} &     6.88 &    21.27 &     0.00 &     26.92 &       5.17 \\
-               & \textbf{CVA, \%} &     8.64 &    13.34 &     0.70 &     19.87 &       4.20 \\
-               & \textbf{PVD, \%} &     4.37 &     7.70 &     2.27 &      5.77 &       3.57 \\
-               & \textbf{CTD, \%} &     5.11 &     4.25 &     3.11 &      4.49 &       3.55 \\
+               & \textbf{Diabetes, \%} &    19.05 &    28.14 &    14.84 &     25.00 &      17.96 \\
+               & \textbf{AMI, \%} &    13.85 &    22.93 &     8.76 &     16.03 &      12.10 \\
+               & \textbf{CHF, \%} &    12.45 &    53.85 &     0.00 &     26.28 &      11.99 \\
+               & \textbf{Renal disease, \%} &     7.53 &    19.54 &     1.92 &     17.95 &       6.10 \\
+               & \textbf{Cancer, \%} &     7.62 &    12.23 &     2.93 &     10.90 &       5.30 \\
+               & \textbf{Dementia, \%} &     6.88 &    21.26 &     0.00 &     26.92 &       5.17 \\
+               & \textbf{CVA, \%} &     8.64 &    13.33 &     0.70 &     19.87 &       4.20 \\
+               & \textbf{PVD, \%} &     4.37 &     7.69 &     2.27 &      5.77 &       3.57 \\
+               & \textbf{CTD, \%} &     5.11 &     4.25 &     3.11 &      4.49 &       3.54 \\
                & \textbf{Obesity, \%} &     2.51 &     3.01 &     1.49 &      7.69 &       1.97 \\
                & \textbf{Metastatic cancer, \%} &     1.58 &     4.49 &     0.00 &      0.64 &       1.03 \\
                & \textbf{Paraplegia, \%} &     1.30 &     3.73 &     0.24 &      0.64 &       1.02 \\
