Add a refresher to incomplete data lit review.

--- a/sections/intro.tex
+++ b/sections/intro.tex
@@ -102,16 +102,22 @@ Ciw~\cite{Palmer2019}.  % TODO Write this section
 
 \subsubsection{Handling incomplete queue data}
 
-It is often the case that in practical situations where suitable data is not
-(immediately) available, further inquiry will stop in that particular line of
-research. Queuing models in healthcare settings appear to be such a
-case.~\cite{Asanjarani2017} is a bibliographic work that collates articles on
-the estimation of queuing system characteristics --- including their parameters.
-Despite its breadth of almost 300 publications from 1955, only two articles have
-been identified as being applied to healthcare:~\cite{Mohammadi2012,Yom2014}.
-Both works are concerned with customers that can re-enter services during their
-time in the queuing system. This is particularly of value when considering the
-effect of unpredictable behaviour in intensive care units, for
+As is discussed in other parts of this section, the data available in this work
+is not as fine as in other comparative works. Without access to such distinct
+and detailed data --- but with the aim of gaining insight from what is available
+--- it is imperative that the gap left by the incomplete data be bridged.
+
+Indeed, it is often the case that in practical situations where suitable data is
+not (immediately) available, further inquiry will stop in that particular line
+of research. Queuing models in healthcare settings appear to be such a case
+where the line ends at incomplete queue data.~\cite{Asanjarani2017} is a
+bibliographic work that collates articles on the estimation of queuing system
+characteristics --- including their parameters.  Despite its breadth of almost
+300 publications from 1955, only two articles have been identified as being
+applied to healthcare:~\cite{Mohammadi2012,Yom2014}.  Both works are concerned
+with customers that can re-enter services during their time in the queuing
+system. This is particularly of value when considering the effect of
+unpredictable behaviour in intensive care units, for
 instance.~\cite{Mohammadi2012} seeks to approximate service and re-service
 densities through a Bayesian approach and by separating out those customers
 seeking to be serviced again. On the other hand,~\cite{Yom2014} considers an
