Start queuing lit review.

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -17,6 +17,17 @@
     url = {https://people.smp.uq.edu.au/PhilipPollett/papers/Qest/QEstAnnBib.pdf}
 }
 
+@article{Bhattacharjee2014,
+    title = "Patient flow modelling and performance analysis of healthcare
+             delivery processes in hospitals: A review and reflections",
+    journal = "Computers \& Industrial Engineering",
+    volume = "78",
+    pages = "299 - 312",
+    year = "2014",
+    doi = "10.1016/j.cie.2014.04.016",
+    author = "Papiya Bhattacharjee and Pradip Kumar Ray",
+}
+
 @article{Curley2017,
     title = {Dealing with Missing Data: A Comparative Exploration of Approaches
              Using the Integrated City Sustainability Database},
@@ -173,6 +184,17 @@
     publisher = {Houghton Mifflin Co.},
 }
 
+@article{McClain1976,
+    author = {John O. McClain},
+    journal = {Inquiry},
+    number = {2},
+    pages = {167--176},
+    title = {Bed Planning Using Queuing Theory Models of Hospital Occupancy: A
+             Sensitivity Analysis},
+    volume = {13},
+    year = {1976},
+}
+
 @article{Mohammadi2012,
     author = {A. Mohammadi and M. R. Salehi-Rad},
     title = {Bayesian Inference and Prediction in an {$M/G/1$} with Optional
@@ -206,23 +228,12 @@
 @article{Olafsson2008,
     title = "Operations research and data mining",
     journal = "European Journal of Operational Research",
-    volume = "187",
+    volume = "87",
     number = "3",
     pages = "1429 - 1448",
     year = "2008",
     doi = "https://doi.org/10.1016/j.ejor.2006.09.023",
     author = "Sigurdur Olafsson and Xiaonan Li and Shuning Wu",
-}
-
-@article{Palmer2018,
-    title = "Modelling deadlock in open restricted queueing networks",
-    journal = "European Journal of Operational Research",
-    volume = "266",
-    number = "2",
-    pages = "609 - 621",
-    year = "2018",
-    doi = "10.1016/j.ejor.2017.10.039",
-    author = "Geraint I. Palmer and Paul R. Harper and Vincent A. Knight",
 }
 
 @article{Palmer2019,
@@ -237,6 +248,16 @@
     doi = {10.1080/17477778.2018.1473909},
 }
 
+@article{Palvannan2012,
+    title = {Queueing for Healthcare},
+    author = {R. Kannapiran Palvannan and Kiok Liang Teow},
+    journal = {Journal of Medical Systems},
+    year = {2012},
+    volume = {36},
+    pages = {541-547},
+    doi = {10.1007/s10916-010-9499-7},
+}
+
 @article{Pampaka2016,
     author = {Maria Pampaka and Graeme Hutcheson and Julian Williams},
     title = {Handling missing data: analysis of a challenging data set using
@@ -247,6 +268,27 @@
     pages = {19-37},
     year  = {2016},
     doi = {10.1080/1743727X.2014.979146},
+}
+
+@inproceedings{Pinto2014,
+    author={Luiz R. {Pinto} and Francisco C. C. {de Campos} and Ignez H. O.
+            {Perp\'{e}tuo} and Yara C. N. M. B. {Ribeiro}},
+    booktitle={Proceedings of the Winter Simulation Conference 2014},
+    title={Analysis of hospital bed capacity via queuing theory and simulation}, 
+    year={2014},
+    pages={1281-1292},
+}
+
+@article{Rebuge2012,
+    title = "Business process analysis in healthcare environments: A methodology
+             based on process mining",
+    journal = "Information Systems",
+    volume = "37",
+    number = "2",
+    pages = "99 - 116",
+    year = "2012",
+    doi = "https://doi.org/10.1016/j.is.2011.01.003",
+    author = "Álvaro Rebuge and Diogo R. Ferreira",
 }
 
 @inproceedings{Satopaa2011,
