--- a/bibliography.bib
+++ b/bibliography.bib
@@ -28,6 +28,18 @@
     author = "Papiya Bhattacharjee and Pradip Kumar Ray",
 }
 
+@article{Collins2018,
+    title = {Influence of deprivation on health care use, health care costs, and
+             mortality in COPD},
+    author = {Peter F Collins and Rebecca J Stratton and Ramesh J
+              Kurukulaaratchy and Marinos Elia},
+    journal = {International Journal of Chronic Obstructive Pulmonary Disease},
+    year = {2018},
+    volume = {13},
+    pages = {1289-1296},
+    doi = {10.2147/COPD.S157594},
+}
+
 @article{Curley2017,
     title = {Dealing with Missing Data: A Comparative Exploration of Approaches
              Using the Integrated City Sustainability Database},
@@ -302,6 +314,21 @@
     booktitle = {Proceedings of the 2011 31st International Conference on
                  Distributed Computing Systems Workshops},
     doi = {10.1109/ICDCSW.2011.20}
+}
+
+@article {Steiner2017,
+	author = {Steiner, Michael C and Lowe, Derek and Beckford, Katy and Blakey,
+              John and Bolton, Charlotte E and Elkin, Sarah and Man, William D
+              -C and Roberts, C Michael and Sewell, Louise and Walker, Paul and
+              Singh, Sally J},
+	title = {Socioeconomic deprivation and the outcome of pulmonary
+             rehabilitation in England and Wales},
+	volume = {72},
+	number = {6},
+	pages = {530--537},
+	year = {2017},
+	doi = {10.1136/thoraxjnl-2016-209376},
+	journal = {Thorax},
 }
 
 @article{Vuik2016a,
