Add Sexton2016 reference to COPD-WIMD link.

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -316,7 +316,20 @@
     doi = {10.1109/ICDCSW.2011.20}
 }
 
-@article {Steiner2017,
+@article{Sexton2016,
+    title = {{GP} supply, deprivation and emergency admission to hospital for
+             {COPD} and diabetes complications in counties across {Ireland}: an
+             exploratory analysis},
+    author = {E Sexton and D Bedford},
+    year = {2016},
+    journal = {Irish Journal of Medical Science},
+    volume = {185},
+    number = {2},
+    pages = {453-461},
+    doi = {10.1007/s11845-015-1359-5},
+}
+
+@article{Steiner2017,
 	author = {Steiner, Michael C and Lowe, Derek and Beckford, Katy and Blakey,
               John and Bolton, Charlotte E and Elkin, Sarah and Man, William D
               -C and Roberts, C Michael and Sewell, Louise and Walker, Paul and
