--- a/sections/intro.tex
+++ b/sections/intro.tex
@@ -174,7 +174,8 @@ The spells included in the dataset are described by the following attributes:
         as sepsis and obesity.
     \item Rank under the 2019 Welsh Index of Multiple Deprivation (WIMD)
         indicating relative deprivation of the postcode area the patient lives
-        in which is known to be linked to COPD~\cite{Collins2018,Steiner2017}.
+        in which is known to be linked to COPD prevalence and
+        severity~\cite{Collins2018,Sexton2016,Steiner2017}.
 \end{itemize}
 
 In addition to the above, the following attributes were engineered for each
